golden/error/runtime_iter_arity_record.test
[for kv in {"key": "value"}: kv]

# output:
 --> stdin:1:5
  |
1 | [for kv in {"key": "value"}: kv]
  |      ^~
Error: Expected two variables in dict iteration.

 --> stdin:1:11
  |
1 | [for kv in {"key": "value"}: kv]
  |            ^~~~~~~~~~~~~~~~
Note: This is a dict, it yields a key and value per iteration.
